--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ ChurnChurnRevolution/Library
 ChurnChurnRevolution/Logs
 ChurnChurnRevolution/Temp
 ChurnChurnRevolution/obj
+ChurnChurnRevolution/UserSettings
